css: Fix table heads in dark mode

--- a/css/colours.css
+++ b/css/colours.css
@@ -2,6 +2,7 @@
     /* Basic */
     --fg: black;
     --bg: #fcfcfc;
+    --table-head: #f2f2f2;
 
     /* Menu */
     --fg-menu: #5b3355;
@@ -50,6 +51,7 @@
         /* Basic */
         --fg: #eaf2ef;
         --bg: #332c31;
+        --table-head: #2d272b;
 
         /* Menu */
         --fg-menu: #cc9bcf;
